--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.3.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
